# wasmstint

./: .gitmodules  .zigversion  README.md  build.zig  build.zig.zon
fuzz/: denylist.txt
fuzz/ffi/: Cargo.toml
fuzz/ffi/src/: ffi.zig  input.zig  lib.rs  wasm_smith.zig  wasmi_diff.rs  wrapper.zig
fuzz/harness/: libfuzzer.zig  llvm.zig  main.zig
fuzz/targets/: execution.zig  validation.zig  wasmi_diff.zig
fuzz/wasm-shrink/: Cargo.toml
fuzz/wasm-shrink/src/: main.rs
fuzz/wasm-smith/: Cargo.toml  README.md
fuzz/wasm-smith/crates/ffi/: Cargo.toml
fuzz/wasm-smith/crates/ffi/src/: lib.rs
fuzz/wasm-smith/crates/generator/: Cargo.toml
fuzz/wasm-smith/crates/generator/src/: hash.rs  lib.rs  wasmi_differential.rs
fuzz/wasm-smith/crates/zig-allocator/: Cargo.toml
fuzz/wasm-smith/crates/zig-allocator/src/: lib.rs
fuzz/wasm-smith/src/: ffi.rs  harness.zig  lib.rs  runner_main.zig  rust_alloc.zig  wasmi_differential.zig  wrapper.zig  zig_smp.rs
fuzz/wasm-smith/targets/: execute.zig  raw_validate.zig  wasmi_differential.zig
src/: FileContent.zig  GlobalAllocator.zig  IndexedArena.zig  Interpreter.zig  LimitedAllocator.zig  Module.zig  PageBufferAllocator.zig  WasiPreview1.zig  Wast.zig  allocators.zig  cli_args.zig  compact_multi_slice.zig  coz.zig  file_content.zig  float.zig  inline_tagged_union.zig  opcodes.zig  pointer.zig  reservation_allocator.zig  root.zig  runtime.zig  size.zig  spectest_main.zig  subprocess.zig  sys.zig  v128.zig  wast_main.zig
src/Interpreter/: Instr.zig  Stack.zig  Trap.zig  const_eval.zig  handlers.zig  instantiation.zig  side_table.zig  value.zig  version.zig
src/Interpreter/handlers/: portable.zig  simd.zig  x86_64_sysv.zig
src/Interpreter/handlers/simd/: portable.zig
src/Module/: ConstExpr.zig  FuncRefs.zig  FuncType.zig  Reader.zig  func_type.zig  val_type.zig  validator.zig
src/WasiPreview1/: Arguments.zig  Csprng.zig  Environ.zig  File.zig  Path.zig  PreopenDir.zig  api.zig  char.zig  errno.zig  fd.zig  host_os.zig  main.zig  test_driver.zig  types.zig
src/WasiPreview1/File/: host_dir.zig  host_file.zig  os.zig  preopen.zig
src/WasiPreview1/host_os/: Dir.zig  linux.zig  path.zig  unix_like.zig  windows.zig
src/Wast/: Arenas.zig  Caches.zig  Command.zig  Error.zig  Errors.zig  Ident.zig  Lexer.zig  LineCol.zig  Module.zig  Name.zig  String.zig  ident.zig  sexpr.zig  value.zig
src/Wast/Module/: Expr.zig  Func.zig  Instr.zig  Limits.zig  Text.zig  Type.zig  TypeUse.zig  encode.zig
src/Wast/Module/encode/: ident_lookup.zig
src/Wast/sexpr/: Parser.zig
src/allocators/: ArenaFallbackAllocator.zig  LimitedAllocator.zig  PageAllocation.zig  reservation_allocator.zig  unrolled_linked_list.zig  virtual_memory.zig
src/runtime/: ImportProvider.zig  ModuleAlloc.zig  ModuleAllocating.zig  ModuleAllocator.zig  ModuleDeallocation.zig  memory.zig  module_inst.zig  paged_memory.zig  table.zig  table_allocator.zig  value.zig
src/runtime/memory/: mapped.zig
src/runtime/table/: Allocated.zig
src/spectest/: Imports.zig  Parser.zig  State.zig  main.zig
src/sys/: Dir.zig  linux.zig  path.zig  unix_like.zig  windows.zig
src/tools/: run_wast.zig  wasip1.zig
tests/: testsuite.zon
tests/fuzzed/: miscellaneous.wast  validation.wast  wasmi_diff.wast
tests/wasip1/zig/: escape_codes.zig  greeting.zig  hello.json  hello.zig  ls.zig
tools/: wabt.zon
