[workspace]
members = [
    "crates/ffi",
    "crates/zig-allocator",
    "crates/generator",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
arbitrary = "1.4.1" # Already a dependency of wasm-smith
bitvec = { version = "1.0.1", default-features = false }
wasm-smith = "0.228.0"

[workspace.dependencies.wasmi]
version = "0.44.0"
default-features = false
features = ["std"]

[profile.dev]
opt-level = 1
debug = "line-tables-only"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
overflow-checks = false
debug-assertions = false

[profile.dev.package.wasm-smith]
opt-level = 3
debug = "none"

[profile.dev.package.wasmi]
opt-level = 3
debug = "none"
